test(apply-box): add changing offsetParent to manual tests

--- a/__tests__/e2e/ui/apply-box/example.html
+++ b/__tests__/e2e/ui/apply-box/example.html
@@ -31,6 +31,13 @@
                 <input type="radio" name="position" id="pos_15">     <label for="pos_15">BELOW_RIGHT_BESIDE</label> 
             </div>
         </div>
+
+        <input type="checkbox" id="outer-container">
+        <label for="outer-container">outer-container position</label>
+        
+        <input type="checkbox" id="form">
+        <label for="form">form position</label>
+
         <div class="outer-container">
           <form name="form" class="form">
               <input type="text" name="input1">
